syntax = "proto3";
package volumefi.paloma.concensus;

option go_package = "github.com/volumefi/conductor/types/paloma";

service Msg {
      rpc AddMessagesSignatures(MsgAddMessagesSignatures) returns (MsgAddMessagesSignaturesResponse);
}

message MsgAddMessagesSignatures {
  string creator = 1;
  repeated MsgSignedMessage signedMessages = 2;

  message MsgSignedMessage {
    uint64 id = 1;
    string queueTypeName = 2;
    bytes signature = 3;
  }
}


message MsgAddMessagesSignaturesResponse {
}


service ValsetTxService {
  rpc RegisterConductor(MsgRegisterConductor) returns (MsgRegisterConductorResponse);
  rpc AddExternalChainInfoForValidator(MsgAddExternalChainInfoForValidator) returns (MsgAddExternalChainInfoForValidatorResponse);
}

message MsgRegisterConductor {
  string creator = 1;
  bytes pubKey = 2;
  bytes signedPubKey = 3;
}

message MsgRegisterConductorResponse {
}

message MsgAddExternalChainInfoForValidator {
  message ChainInfo {
    string chainID = 1;
    string address = 2;
  }
  string creator = 1;
  repeated ChainInfo chainInfos = 2;
}

message MsgAddExternalChainInfoForValidatorResponse {
}

